--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Document</title>
+		<title>HA Sticky</title>
 		<link rel="stylesheet" href="./styles.css" />
 	</head>
 	<body class="h-full text-gray-200 bg-gray-900">
